--- a/client/src/App.css
+++ b/client/src/App.css
@@ -17,3 +17,10 @@
 .mantine-j3jbtx {
   padding-left: 0;
 }
+
+.alert-container {
+  position: fixed;
+  bottom: 5%;
+  left: 5%;
+  z-index: 1000;
+}
